--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : "La Bitácora de root"
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "TeroRERO"
+description              : "Detalles sobre la bitácora de root."
 url                      : "http://la.bitacoraroot.com"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+repository               : "mmistakes/minimal-mistakes"
+teaser                   : "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
