--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ name                     : "TeroRERO"
 description              : "Detalles sobre la bitácora de root."
 url                      : "http://la.bitacoraroot.com"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "mmistakes/minimal-mistakes"
+repository               : "bitacoraroot/blog"
 teaser                   : "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
