--- a/_config.yml
+++ b/_config.yml
@@ -91,10 +91,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  name             : "TeroRERO GNU"
+  avatar           : "/assets/images/bio-photo.jpg"
+  bio              : "El futuro es historia para Dios."
+  location         : "La Paz - Bolivia"
   email            :
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
