--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ naver_site_verification  :
 
 # Social Sharing
 twitter:
-  username               :
+  username               : "TeroRERO"
 facebook:
   username               :
   app_id                 :
