Working como default

--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ comments:
     colorscheme          : # "light" (default), "dark"
 staticman:
   allowedFields          : # ['name', 'email', 'url', 'message']
-  branch                 : "master"
+  branch                 : "working"
   commitMessage          : # "New comment"
   filename               : # comment-{@timestamp}
   format                 : # "yml"
