--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ title                    : "La Bitácora de root"
 title_separator          : "-"
 name                     : &name "TeroRERO GNU" # &name is a YAML anchor which can be *referenced later
 description              : &description "El espacio para la Bitácora de root."
-url                      : "https://la.bitacoraroot.com/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://la.bitacoraroot.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # "/minimal-mistakes" # the subpath of your site, e.g. "/blog"
 repository               : "bitacoraroot/blog"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -98,7 +98,7 @@ analytics:
 author:
   name             : *name # *name is a YAML reference pointing to the &anchor earlier
   avatar           : "/assets/images/michael-rose.jpg"
-  bio              : "Just another boring, tattooed, time traveling, designer."
+  bio              : "El futuro para Dios es historia, para vosotros siempre Paz y Bien." # "Just another boring, tattooed, time traveling, designer."
   location         : "La Paz, Bolivia"
   email            :
   uri              : "https://la.bitacoraroot.com"
@@ -125,7 +125,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          :
+  youtube          : "https://www.youtube.com/channel/UCEb0twVezobzHNwUmbXHvlA"
 
 
 # Reading Files
