--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ analytics:
 author:
   name             : *name # *name is a YAML reference pointing to the &anchor earlier
   avatar           : "/assets/images/michael-rose.jpg"
-  bio              : "El futuro para Dios es historia, para vosotros siempre Paz y Bien." # "Just another boring, tattooed, time traveling, designer."
+  bio              : "El futuro para Dios es historia!." # "Just another boring, tattooed, time traveling, designer."
   location         : "La Paz, Bolivia"
   email            :
   uri              : "https://la.bitacoraroot.com"
