--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   name             : *name # *name is a YAML reference pointing to the &anchor earlier
   avatar           : "/assets/images/devin-conde.jpg"
   bio              : "El futuro para Dios es historia!." # "Just another boring, tattooed, time traveling, designer."
-  location         : "La Paz, Bolivia"
+  location         : # "La Paz, Bolivia"
   email            :
   uri              : "https://la.bitacoraroot.com"
   home             : "https://la.bitacoraroot.com"
@@ -269,7 +269,7 @@ sass:
 permalink: /:categories/:title/
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
-timezone: America/New_York # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: America/La_Paz # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins (previously gems:)
