Update mail and personal website.

--- a/_config.yml
+++ b/_config.yml
@@ -100,8 +100,8 @@ author:
   avatar           : "/assets/images/devin-conde.jpg"
   bio              : "El futuro para Dios es historia!." # "Just another boring, tattooed, time traveling, designer."
   location         : # "La Paz, Bolivia"
-  email            :
-  uri              : "https://la.bitacoraroot.com"
+  email            : "terorero@bitacoraroot.com"
+  uri              : "https://root.devinconde.com"
   home             : "https://la.bitacoraroot.com"
   bitbucket        :
   codepen          :
