--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ algolia:
   application_id         : # YOUR_APPLICATION_ID
   index_name             : # YOUR_INDEX_NAME
   search_only_api_key    : # YOUR_SEARCH_ONLY_API_KEY
-  powered_by             : # true (default), false
+  powered_by             : false # true (default), false
 
 # SEO Related
 google_site_verification : # Replace this with your ID, or delete
