--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -16,3 +16,10 @@ Cornelius Fiddlebone:
   avatar      : "/assets/images/bio-photo.jpg"
   twitter     : "rhymeswithsackit"
   google_plus : "CorneliusFiddlebone"
+
+Devin R. Conde Mancilla:
+  name: "Devin R. Conde Mancilla"
+  email: "condevin@bitacoraroot.com"
+  bio: "Que la fuerza los acompañe."
+  avatar: "/assets/images/condevin.png"
+  twitter: "terorero"
