--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -17,7 +17,7 @@ Cornelius Fiddlebone:
   twitter     : "rhymeswithsackit"
   google_plus : "CorneliusFiddlebone"
 
-Devin R. Conde Mancilla:
+Devin Conde:
   name: "Devin R. Conde Mancilla"
   email: "condevin@bitacoraroot.com"
   bio: "Que la fuerza los acompañe."
