--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ comments:
     num_posts            : # 5 (default)
     colorscheme          : # "light" (default), "dark"
 staticman:
-  allowedFields          : ['name', 'email', 'message'] # ['name', 'email', 'url', 'message']
+  allowedFields          : # ['name', 'email', 'url', 'message']
   branch                 : "master"
   commitMessage          : # "New comment"
   filename               : # comment-{@timestamp}
