--- a/_config.yml
+++ b/_config.yml
@@ -133,7 +133,7 @@ include:
   - .htaccess
   - _pages
   - _includes
-  - staticman.yml  # Incluyendo por error en comentarios desde github
+  - staticman.yml  # Incluyendo para corregir error en comentarios desde github
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
