--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ staticman:
     email                : "md5"
   generatedFields:
     date:
-      type               : # "date"
+      type               : "date_to_string" # TeroRERO activa por locale date "date"
       options:
         format           : # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
 reCaptcha:
