Change footer and locale description to footer

--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -25,6 +25,7 @@ en: &DEFAULT_EN
   follow_label               : "Follow:"
   feed_label                 : "Feed"
   powered_by                 : "Powered by"
+  derecho_reservado          : "Todos los derechos reservados."
   website_label              : "Website"
   email_label                : "Email"
   recent_posts               : "Recent Posts"
@@ -76,6 +77,7 @@ es: &DEFAULT_ES
   follow_label               : "Seguir:"
   feed_label                 : "Feed"
   powered_by                 : "Powered by"
+  derecho_reservado          : "Todos los derechos reservados."
   website_label              : "Sitio web"
   email_label                : "Email"
   recent_posts               : "Entradas recientes"
@@ -121,6 +123,7 @@ fr: &DEFAULT_FR
   follow_label               : "Contact"
   feed_label                 : "Flux"
   powered_by                 : "Propulsé par"
+  derecho_reservado          : "Todos los derechos reservados."
   website_label              : "Site"
   email_label                : "Email"
   recent_posts               : "Posts récents"
@@ -169,6 +172,7 @@ tr: &DEFAULT_TR
   follow_label               : "Takip et:"
   feed_label                 : "RSS"
   powered_by                 : "Emeği geçenler: "
+  derecho_reservado          : "Todos los derechos reservados."
   website_label              : "Web sayfası"
   email_label                : "E-posta"
   recent_posts               : "Son yazılar"
