--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -65,7 +65,8 @@ es: &DEFAULT_ES
   ext_link_label             : "Enlace"
   less_than                  : "menos de"
   minute_read                : "minuto(s) de lectura"
-  share_on_label             : "Compartir"
+  # share_on_label             : "Compartir"
+  share_on_label             : "Comparte via"
   meta_label                 :
   tags_label                 : "Etiquetas:"
   categories_label           : "Categorías:"
