--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -66,7 +66,7 @@ es: &DEFAULT_ES
   less_than                  : "menos de"
   minute_read                : "minuto(s) de lectura"
   # share_on_label             : "Compartir"
-  share_on_label             : "Comparte via"
+  share_on_label             : "Comparte mediante"
   meta_label                 :
   tags_label                 : "Etiquetas:"
   categories_label           : "Categorías:"
