Preparando para cambiar a intelliJ

--- a/_config.yml
+++ b/_config.yml
@@ -139,6 +139,8 @@ exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
   - vendor
+  - .idea
+  - .vscode
   - .asset-cache
   - .bundle
   - .jekyll-assets-cache
