Tunning frontpage colors

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,7 +28,7 @@ main:
     url: /year-archive/
   - title: "Sample Collections"
     url: /collection-archive/
-  - title: "Terms &amp; Privacy Policy"
+  - title: "T&eacute;rminos &amp; Pol&iacute;tica de Privacidad"
     url: /terms/
 
 
