--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -86,7 +86,7 @@ docs:
         url: /docs/docs-2-2/
       - title: "License"
         url: /docs/license/
-      - title: "Terms &amp; Privacy Policy"
+      - title: "T&eacute;rminos &amp; Pol&iacute;tica de Privacidad"
         url: /terms/
 
 # sidebar navigation list sample
