--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,7 +28,7 @@ main:
     url: /year-archive/
   - title: "Sample Collections"
     url: /collection-archive/
-  - title: "T&eacute;rminos &amp; Pol&iacute;tica de Privacidad"
+  - title: "Pol&iacute;tica de Privacidad"
     url: /terms/
 
 
@@ -86,7 +86,7 @@ docs:
         url: /docs/docs-2-2/
       - title: "License"
         url: /docs/license/
-      - title: "T&eacute;rminos &amp; Pol&iacute;tica de Privacidad"
+      - title: "Pol&iacute;tica de Privacidad"
         url: /terms/
 
 # sidebar navigation list sample
