Change color theme

--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 remote_theme             : "mmistakes/minimal-mistakes"
 # theme                    : "minimal-mistakes-jekyll"
-minimal_mistakes_skin    : "midblue" # "default", "air", "fake", "aqua", "bitacora", "colega", "contrast", "dark", "dirt", "neon", "mint", "midblue", "peacoblue", "plum", "realmidblue", "sunrise", "zimbron"
-
+minimal_mistakes_skin    : "zimbron" # "default", "air", "fake", "aqua", "bitacora", "colega", "contrast", "dark", "dirt", "neon", "mint", "midblue", "peacoblue", "plum", "realmidblue", "sunrise", "zimbron"
+# minimal_mistakes_skin    : "midblue" # "default", "air", "fake", "aqua", "bitacora", "colega", "contrast", "dark", "dirt", "neon", "mint", "midblue", "peacoblue", "plum", "realmidblue", "sunrise", "zimbron"
 # Site Settings
 locale                   : "es-ES"
 title                    : "La Bitácora de root"
